[metadata]
name = my_package
version = 1.0.0
author = Lijunhui
author_email = muzijunhui@outlook.com
description = A short description of your package


[files]
packages =
    my_package #包名 递归Python包层次结构并安装，如果未指定packages，则默认为[metadata]部分中给出的name字段的值。注意会根据__init__.py进行递归扫描

[entry_points] # 模块入口
my_package.test =
    test = my_package.test:Test
